# hop3d

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
doc/html/: _cloud_8cpp.html  _cloud_8cpp__incl.map  _cloud_8cpp__incl.md5  _cloud_8h.html  _cloud_8h__dep__incl.map  _cloud_8h__dep__incl.md5  _cloud_8h__incl.map  _cloud_8h__incl.md5  _cloud_8h_source.html  _defs_8cpp.html  _defs_8cpp__incl.map  _defs_8cpp__incl.md5  _defs_8h.html  _defs_8h__dep__incl.map  _defs_8h__dep__incl.md5  _defs_8h__incl.map  _defs_8h__incl.md5  _defs_8h_source.html  _graph_8cpp.html  _graph_8cpp__incl.map  _graph_8cpp__incl.md5  _graph_8h.html  _graph_8h__dep__incl.map  _graph_8h__dep__incl.md5  _graph_8h__incl.map  _graph_8h__incl.md5  _graph_8h_source.html  _graph_builder_8cpp.html  _graph_builder_8cpp__incl.map  _graph_builder_8cpp__incl.md5  _graph_builder_8h.html  _graph_builder_8h__dep__incl.map  _graph_builder_8h__dep__incl.md5  _graph_builder_8h__incl.map  _graph_builder_8h__incl.md5  _graph_builder_8h_source.html  _inference_2_data_8cpp.html  _inference_2_data_8h.html  _inference_2_data_8h_source.html  _inference_8cpp.html  (+195 more)
doc/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  files_0.js  files_2.js  files_3.js  files_4.js  files_6.js  files_7.js  files_8.js  files_a.js  functions_1.js  functions_2.js  related_0.js  search.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js
doc/latex/: _cloud_8cpp.tex  _cloud_8cpp__incl.md5  _cloud_8h.tex  _cloud_8h__dep__incl.md5  _cloud_8h__incl.md5  _defs_8cpp.tex  _defs_8cpp__incl.md5  _defs_8h.tex  _defs_8h__dep__incl.md5  _defs_8h__incl.md5  _graph_8cpp.tex  _graph_8cpp__incl.md5  _graph_8h.tex  _graph_8h__dep__incl.md5  _graph_8h__incl.md5  _graph_builder_8cpp.tex  _graph_builder_8cpp__incl.md5  _graph_builder_8h.tex  _graph_builder_8h__dep__incl.md5  _graph_builder_8h__incl.md5  _inference_2_data_8cpp.tex  _inference_2_data_8h.tex  _inference_8cpp.tex  _inference_8h.tex  _layer_filterer_8cpp.tex  _layer_filterer_8cpp__incl.md5  _layer_filterer_8h.tex  _layer_filterer_8h__dep__incl.md5  _layer_filterer_8h__incl.md5  _learning_2_data_8cpp.tex  _learning_2_data_8h.tex  _learning_8cpp.tex  _learning_8h.tex  _local_inhibiter_8cpp.tex  _local_inhibiter_8cpp__incl.md5  _local_inhibiter_8h.tex  _local_inhibiter_8h__dep__incl.md5  _local_inhibiter_8h__incl.md5  _part_8cpp.tex  _part_8cpp__incl.md5  (+82 more)
include/: GraphBuilder.h  LayerFilter.h  LayerVocabulary.h  LocalInhibitor.h  ObjectCloud.h  ObjectGraph.h  ObjectReader.h  ObjectWriter.h  Part.h  PartRealization.h  PartSelector.h  StatisticsBuilder.h  Vocabulary.h
include/Core/: GraphBuilder.h  LayerFilterer.h  LocalInhibiter.h  PartSelector.h  Reader.h  StatisticsBuilder.h
include/Data/: Cloud.h  Defs.h  Graph.h  Part.h  Vocabulary.h
include/Dataset/: dataset.h  datasetBoris.h
include/HOP3D/: HOP3D.h  HOP3DBham.h
include/ImageFilter/: depthImageFilter.h  imageFilter.h  normalImageFilter.h
include/ObjectComposition/: objectComposition.h  objectCompositionOctree.h
include/PartSelector/: partSelector.h  partSelectorMean.h
include/QVisualizer/: Qvisualizer.h
include/StatisticsBuilder/: statisticsBuilder.h  unbiasedStatsBuilder.h
include/Utilities/: ImagesDisplay.h  Reader.h  Visualizer.h  Writer.h  depthSensorModel.h  kabschEst.h  observer.h  transformEst.h
include/Visualizer/: Visualizer.h  quaternion_utils.hpp
include/hop3d/Data/: Cloud.h  Defs.h  Graph.h  Part.h  Vocabulary.h  hop3dmath.h
include/hop3d/Dataset/: dataset.h  datasetBoris.h  datasetPacman.h
include/hop3d/HOP3D/: HOP3D.h  HOP3DBham.h
include/hop3d/ImageFilter/: depthImageFilter.h  imageFilter.h  normalImageFilter.h
include/hop3d/ObjectComposition/: objectComposition.h  objectCompositionOctree.h
include/hop3d/PartSelector/: partSelector.h  partSelectorAgglomerative.h  partSelectorMean.h
include/hop3d/QVisualizer/: Qvisualizer.h  visualizer.h
include/hop3d/StatisticsBuilder/: statisticsBuilder.h  unbiasedStatsBuilder.h
include/hop3d/Utilities/: ImagesDisplay.h  Reader.h  Writer.h  depthSensorModel.h  observer.h  stopwatch.h  transformEst.h
include/hop3d/Visualizer/: vboindexer.hpp
resources/: CarmineModel.xml  KinectModel.xml  configGlobal.xml  datasetBoris.xml  depthFilter.xml  hierarchyBoris.h3d  hop3dConfigGlobal.xml  hop3dDatasetBoris.xml  hop3dDatasetBorisGrasp.xml  hop3dDatasetBorisIncremental.xml  hop3dDatasetBorisTest.xml  hop3dDatasetPacman.xml  hop3dDepthFilter.xml  hop3dGICP.xml  hop3dKinectModelPacman.xml  hop3dObjectComposition.xml  hop3dPartSelector.xml  hop3dPartSelectorAgglomerative.xml  hop3dQvisualizerConfig.xml  hop3d_filters_7x7_0_005.xml  hop3d_normals_7x7_0_005.xml  masks_7x7_0_005.xml  objectComposition.xml  partSelector.xml  partSelectorAgglomerative.xml  qvisualizerConfig.xml  statsBuilder.xml
src/: GraphBuilder.cpp  LayerFilter.cpp  LayerVocabulary.cpp  LocalInhibitor.cpp  ObjectCloud.cpp  ObjectGraph.cpp  ObjectReader.cpp  PartRealization.cpp  PartSelector.cpp  StatisticsBuilder.cpp
src/Core/: GraphBuilder.cpp  LayerFilterer.cpp  LocalInhibiter.cpp  PartSelector.cpp  Reader.cpp  StatisticsBuilder.cpp  Writer.cpp
src/Data/: Cloud.cpp  Defs.cpp  Graph.cpp  Part.cpp  Vocabulary.cpp  hop3dmath.cpp
src/Dataset/: datasetBoris.cpp  datasetPacman.cpp
src/HOP3D/: HOP3DBham.cpp
src/ImageFilter/: depthImageFilter.cpp  normalImageFilter.cpp
src/ObjectComposition/: objectCompositionOctree.cpp
src/PartSelector/: partSelectorAgglomerative.cpp  partSelectorMean.cpp
src/QVisualizer/: Qvisualizer.cpp
src/StatisticsBuilder/: unbiasedStatsBuilder.cpp
src/Utilities/: ImagesDisplay.cpp  Reader.cpp  Visualizer.cpp  Writer.cpp  depthSensorModel.cpp  kabschEst.cpp  observer.cpp
src/Visualizer/: Visualizer.cpp  controls.cpp  objloader.cpp  quaternion_utils.cpp  shader.cpp  vboindexer.cpp
(+6 files in other folders)
